Bootcamp_51_ZemosoDiagnostic/backend/deploymentadress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bc51-address
  labels:
    app: bc51-address
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: bc51-address
    
  template:
    metadata:
      name: bc51-address
      labels:
        app: bc51-address
    spec:
      containers:
        - name: address
          image: ghcr.io/malyadr/address050511:latest
          ports:
            - containerPort: 9001
      imagePullSecrets: 
        - name: mysecret

---

apiVersion: v1
kind: Service
metadata:
  name: bc51-address
  labels:
    app: bc51-address
spec:
  type: ClusterIP
  ports:
  - port: 9001
    targetPort: 9001
  selector:
    app: bc51-address
