Bootcamp_51_ZemosoDiagnostic/backend/deploymentorders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bc51-orders-svc
  labels:
    app: bc51-orders
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: bc51-orders
    
  template:
    metadata:
      name: bc51-orders
      labels:
        app: bc51-orders
    spec:
      containers:
        - name: bc51-orders-svc
          image: ghcr.io/malyadr/orders05051:latest
          ports:
            - containerPort: 9002
      imagePullSecrets: 
        - name: mysecret

---

apiVersion: v1
kind: Service
metadata:
  name: bc51-orders-svc
  labels:
    app: bc51-orders
spec:
  type: ClusterIP
  ports:
  - port: 9002
    targetPort: 9002
  selector:
    app: bc51-orders
