Bootcamp_51_ZemosoDiagnostic/backend/deploymentpatients.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bc51-patientservice
  labels:
    app: bc51-patient
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: bc51-patient
    
  template:
    metadata:
      name: bc51-patient
      labels:
        app: bc51-patient
    spec:
      containers:
        - name: patient 
          image: ghcr.io/malyadr/patient05051:latest
          ports:
            - containerPort: 9003
      imagePullSecrets: 
        - name: mysecret

---

apiVersion: v1
kind: Service
metadata:
  name: bc51-patientservice
  labels:
    app: bc51-patientservice
spec:
  type: ClusterIP
  ports:
  - port: 9003
    targetPort: 9003
  selector:
    app: bc51-patient
