Bootcamp_51_ZemosoDiagnostic/backend/deploymentservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bc51-service
  labels:
    app: bc51-service
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: bc51-service
    
  template:
    metadata:
      name: bc51-service
      labels:
        app: bc51-service
    spec:
      containers:
        - name: service
          image: ghcr.io/malyadr/service05051:latest
          ports:
            - containerPort: 8761
      imagePullSecrets: 
        - name: mysecret

---

apiVersion: v1
kind: Service
metadata:
  name: bc51-service
  labels:
    app: bc51-service
spec:
  type: ClusterIP
  ports:
  - port: 8761
    targetPort: 8761
  selector:
    app: bc51-service
