Bootcamp_51_ZemosoDiagnostic/backend/deploymentusers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bc51-user-svc
  labels:
    app: bc51-user
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: bc51-user
    
  template:
    metadata:
      name: bc51-user
      labels:
        app: bc51-user
    spec:
      containers:
        - name: user
          image: ghcr.io/malyadr/users050551:latest
          ports:
            - containerPort: 9004
      imagePullSecrets: 
        - name: mysecret

---

apiVersion: v1
kind: Service
metadata:
  name: bc51-user-svc
  labels:
    app: bc51-user
spec:
  type: ClusterIP
  ports:
  - port: 9004
    targetPort: 9004
  selector:
    app: bc51-user
