Bootcamp_51_ZemosoDiagnostic/backend/serviceingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  ingressClassName: nginx
  rules:
  - host: diagnostic51.tk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bc51-service
            port:
              number: 8761
